# system1

./: .gitignore  CMakeLists.txt  MagicData Technical Assignment.docx  README.md
src/: main.cpp  repo.cpp  repo.hpp  storage.cpp  storage.hpp  util.hpp
tests/: tests.cpp
